parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration program
Rule 2     program -> definition program
Rule 3     program -> empty
Rule 4     declaration -> DECL ID LPAREN function_args RPAREN COLON return_type
Rule 5     definition -> DEF ID LPAREN function_args RPAREN COLON return_type block
Rule 6     function_args -> ID COLON var_type function_args
Rule 7     function_args -> COMMA function_args
Rule 8     function_args -> empty
Rule 9     return_type -> INT
Rule 10    return_type -> FLOAT
Rule 11    return_type -> STRING
Rule 12    return_type -> BOOLEAN
Rule 13    return_type -> VOID
Rule 14    block -> LBRACE recursive_statement RBRACE
Rule 15    recursive_statement -> statement recursive_statement
Rule 16    recursive_statement -> empty
Rule 17    statement -> return_statement
Rule 18    statement -> expression SEMI
Rule 19    statement -> if_statement
Rule 20    statement -> while_statement
Rule 21    statement -> variable_declaration
Rule 22    statement -> variable_assignment
Rule 23    return_statement -> RETURN ret_value SEMI
Rule 24    ret_value -> expression
Rule 25    ret_value -> empty
Rule 26    if_statement -> IF expression block else_statement
Rule 27    else_statement -> ELSE block
Rule 28    else_statement -> empty
Rule 29    while_statement -> WHILE expression block
Rule 30    variable_declaration -> ID COLON var_type EQUALS expression SEMI
Rule 31    variable_assignment -> ID EQUALS expression SEMI
Rule 32    var_type -> FLOAT
Rule 33    var_type -> INT
Rule 34    var_type -> STRING
Rule 35    var_type -> BOOLEAN
Rule 36    expression -> expression_binary_operation
Rule 37    expression -> expression_variable
Rule 38    expression -> expression_unary_operation
Rule 39    expression -> expression_literal
Rule 40    expression -> function_invocation
Rule 41    expression -> index_access
Rule 42    expression_binary_operation -> expression PLUS expression
Rule 43    expression_binary_operation -> expression MINUS expression
Rule 44    expression_binary_operation -> expression TIMES expression
Rule 45    expression_binary_operation -> expression DIVIDE expression
Rule 46    expression_binary_operation -> expression MOD expression
Rule 47    expression_binary_operation -> expression AND expression
Rule 48    expression_binary_operation -> expression OR expression
Rule 49    expression_binary_operation -> expression LT expression
Rule 50    expression_binary_operation -> expression GT expression
Rule 51    expression_binary_operation -> expression LE expression
Rule 52    expression_binary_operation -> expression GE expression
Rule 53    expression_binary_operation -> expression EQ expression
Rule 54    expression_binary_operation -> expression NEQ expression
Rule 55    expression_variable -> ID
Rule 56    expression_unary_operation -> NOT expression
Rule 57    expression_unary_operation -> MINUS expression
Rule 58    expression_literal -> FLOAT_LITERAL
Rule 59    expression_literal -> INT_LITERAL
Rule 60    expression_literal -> STRING_LITERAL
Rule 61    expression_literal -> BOOLEAN_LITERAL
Rule 62    function_invocation -> ID LPAREN func_invocation_args RPAREN
Rule 63    func_invocation_args -> ID func_invocation_args
Rule 64    func_invocation_args -> COMMA func_invocation_args
Rule 65    func_invocation_args -> empty
Rule 66    index_access -> ID index_access_aux
Rule 67    index_access_aux -> LBRACKET expression RBRACKET
Rule 68    index_access_aux -> LPAREN func_invocation_args RPAREN LBRACKET expression RBRACKET
Rule 69    empty -> <empty>

Terminals, with rules where they appear

AND                  : 47
BOOLEAN              : 12 35
BOOLEAN_LITERAL      : 61
COLON                : 4 5 6 30
COMMA                : 7 64
DECL                 : 4
DEF                  : 5
DIVIDE               : 45
ELSE                 : 27
EQ                   : 53
EQUALS               : 30 31
FLOAT                : 10 32
FLOAT_LITERAL        : 58
GE                   : 52
GT                   : 50
ID                   : 4 5 6 30 31 55 62 63 66
IF                   : 26
INT                  : 9 33
INT_LITERAL          : 59
LBRACE               : 14
LBRACKET             : 67 68
LE                   : 51
LPAREN               : 4 5 62 68
LT                   : 49
MINUS                : 43 57
MOD                  : 46
NEQ                  : 54
NOT                  : 56
OR                   : 48
PLUS                 : 42
RBRACE               : 14
RBRACKET             : 67 68
RETURN               : 23
RPAREN               : 4 5 62 68
SEMI                 : 18 23 30 31
STRING               : 11 34
STRING_LITERAL       : 60
TIMES                : 44
VOID                 : 13
WHILE                : 29
error                : 

Nonterminals, with rules where they appear

block                : 5 26 27 29
declaration          : 1
definition           : 2
else_statement       : 26
empty                : 3 8 16 25 28 65
expression           : 18 24 26 29 30 31 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 56 57 67 68
expression_binary_operation : 36
expression_literal   : 39
expression_unary_operation : 38
expression_variable  : 37
func_invocation_args : 62 63 64 68
function_args        : 4 5 6 7
function_invocation  : 40
if_statement         : 19
index_access         : 41
index_access_aux     : 66
program              : 1 2 0
recursive_statement  : 14 15
ret_value            : 23
return_statement     : 17
return_type          : 4 5
statement            : 15
var_type             : 6 30
variable_assignment  : 22
variable_declaration : 21
while_statement      : 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration program
    (2) program -> . definition program
    (3) program -> . empty
    (4) declaration -> . DECL ID LPAREN function_args RPAREN COLON return_type
    (5) definition -> . DEF ID LPAREN function_args RPAREN COLON return_type block
    (69) empty -> .

    DECL            shift and go to state 5
    DEF             shift and go to state 6
    $end            reduce using rule 69 (empty -> .)

    program                        shift and go to state 1
    declaration                    shift and go to state 2
    definition                     shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration . program
    (1) program -> . declaration program
    (2) program -> . definition program
    (3) program -> . empty
    (4) declaration -> . DECL ID LPAREN function_args RPAREN COLON return_type
    (5) definition -> . DEF ID LPAREN function_args RPAREN COLON return_type block
    (69) empty -> .

    DECL            shift and go to state 5
    DEF             shift and go to state 6
    $end            reduce using rule 69 (empty -> .)

    declaration                    shift and go to state 2
    program                        shift and go to state 7
    definition                     shift and go to state 3
    empty                          shift and go to state 4

state 3

    (2) program -> definition . program
    (1) program -> . declaration program
    (2) program -> . definition program
    (3) program -> . empty
    (4) declaration -> . DECL ID LPAREN function_args RPAREN COLON return_type
    (5) definition -> . DEF ID LPAREN function_args RPAREN COLON return_type block
    (69) empty -> .

    DECL            shift and go to state 5
    DEF             shift and go to state 6
    $end            reduce using rule 69 (empty -> .)

    definition                     shift and go to state 3
    program                        shift and go to state 8
    declaration                    shift and go to state 2
    empty                          shift and go to state 4

state 4

    (3) program -> empty .

    $end            reduce using rule 3 (program -> empty .)


state 5

    (4) declaration -> DECL . ID LPAREN function_args RPAREN COLON return_type

    ID              shift and go to state 9


state 6

    (5) definition -> DEF . ID LPAREN function_args RPAREN COLON return_type block

    ID              shift and go to state 10


state 7

    (1) program -> declaration program .

    $end            reduce using rule 1 (program -> declaration program .)


state 8

    (2) program -> definition program .

    $end            reduce using rule 2 (program -> definition program .)


state 9

    (4) declaration -> DECL ID . LPAREN function_args RPAREN COLON return_type

    LPAREN          shift and go to state 11


state 10

    (5) definition -> DEF ID . LPAREN function_args RPAREN COLON return_type block

    LPAREN          shift and go to state 12


state 11

    (4) declaration -> DECL ID LPAREN . function_args RPAREN COLON return_type
    (6) function_args -> . ID COLON var_type function_args
    (7) function_args -> . COMMA function_args
    (8) function_args -> . empty
    (69) empty -> .

    ID              shift and go to state 13
    COMMA           shift and go to state 15
    RPAREN          reduce using rule 69 (empty -> .)

    function_args                  shift and go to state 14
    empty                          shift and go to state 16

state 12

    (5) definition -> DEF ID LPAREN . function_args RPAREN COLON return_type block
    (6) function_args -> . ID COLON var_type function_args
    (7) function_args -> . COMMA function_args
    (8) function_args -> . empty
    (69) empty -> .

    ID              shift and go to state 13
    COMMA           shift and go to state 15
    RPAREN          reduce using rule 69 (empty -> .)

    function_args                  shift and go to state 17
    empty                          shift and go to state 16

state 13

    (6) function_args -> ID . COLON var_type function_args

    COLON           shift and go to state 18


state 14

    (4) declaration -> DECL ID LPAREN function_args . RPAREN COLON return_type

    RPAREN          shift and go to state 19


state 15

    (7) function_args -> COMMA . function_args
    (6) function_args -> . ID COLON var_type function_args
    (7) function_args -> . COMMA function_args
    (8) function_args -> . empty
    (69) empty -> .

    ID              shift and go to state 13
    COMMA           shift and go to state 15
    RPAREN          reduce using rule 69 (empty -> .)

    function_args                  shift and go to state 20
    empty                          shift and go to state 16

state 16

    (8) function_args -> empty .

    RPAREN          reduce using rule 8 (function_args -> empty .)


state 17

    (5) definition -> DEF ID LPAREN function_args . RPAREN COLON return_type block

    RPAREN          shift and go to state 21


state 18

    (6) function_args -> ID COLON . var_type function_args
    (32) var_type -> . FLOAT
    (33) var_type -> . INT
    (34) var_type -> . STRING
    (35) var_type -> . BOOLEAN

    FLOAT           shift and go to state 23
    INT             shift and go to state 24
    STRING          shift and go to state 25
    BOOLEAN         shift and go to state 26

    var_type                       shift and go to state 22

state 19

    (4) declaration -> DECL ID LPAREN function_args RPAREN . COLON return_type

    COLON           shift and go to state 27


state 20

    (7) function_args -> COMMA function_args .

    RPAREN          reduce using rule 7 (function_args -> COMMA function_args .)


state 21

    (5) definition -> DEF ID LPAREN function_args RPAREN . COLON return_type block

    COLON           shift and go to state 28


state 22

    (6) function_args -> ID COLON var_type . function_args
    (6) function_args -> . ID COLON var_type function_args
    (7) function_args -> . COMMA function_args
    (8) function_args -> . empty
    (69) empty -> .

    ID              shift and go to state 13
    COMMA           shift and go to state 15
    RPAREN          reduce using rule 69 (empty -> .)

    function_args                  shift and go to state 29
    empty                          shift and go to state 16

state 23

    (32) var_type -> FLOAT .

    ID              reduce using rule 32 (var_type -> FLOAT .)
    COMMA           reduce using rule 32 (var_type -> FLOAT .)
    RPAREN          reduce using rule 32 (var_type -> FLOAT .)
    EQUALS          reduce using rule 32 (var_type -> FLOAT .)


state 24

    (33) var_type -> INT .

    ID              reduce using rule 33 (var_type -> INT .)
    COMMA           reduce using rule 33 (var_type -> INT .)
    RPAREN          reduce using rule 33 (var_type -> INT .)
    EQUALS          reduce using rule 33 (var_type -> INT .)


state 25

    (34) var_type -> STRING .

    ID              reduce using rule 34 (var_type -> STRING .)
    COMMA           reduce using rule 34 (var_type -> STRING .)
    RPAREN          reduce using rule 34 (var_type -> STRING .)
    EQUALS          reduce using rule 34 (var_type -> STRING .)


state 26

    (35) var_type -> BOOLEAN .

    ID              reduce using rule 35 (var_type -> BOOLEAN .)
    COMMA           reduce using rule 35 (var_type -> BOOLEAN .)
    RPAREN          reduce using rule 35 (var_type -> BOOLEAN .)
    EQUALS          reduce using rule 35 (var_type -> BOOLEAN .)


state 27

    (4) declaration -> DECL ID LPAREN function_args RPAREN COLON . return_type
    (9) return_type -> . INT
    (10) return_type -> . FLOAT
    (11) return_type -> . STRING
    (12) return_type -> . BOOLEAN
    (13) return_type -> . VOID

    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    STRING          shift and go to state 33
    BOOLEAN         shift and go to state 34
    VOID            shift and go to state 35

    return_type                    shift and go to state 30

state 28

    (5) definition -> DEF ID LPAREN function_args RPAREN COLON . return_type block
    (9) return_type -> . INT
    (10) return_type -> . FLOAT
    (11) return_type -> . STRING
    (12) return_type -> . BOOLEAN
    (13) return_type -> . VOID

    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    STRING          shift and go to state 33
    BOOLEAN         shift and go to state 34
    VOID            shift and go to state 35

    return_type                    shift and go to state 36

state 29

    (6) function_args -> ID COLON var_type function_args .

    RPAREN          reduce using rule 6 (function_args -> ID COLON var_type function_args .)


state 30

    (4) declaration -> DECL ID LPAREN function_args RPAREN COLON return_type .

    DECL            reduce using rule 4 (declaration -> DECL ID LPAREN function_args RPAREN COLON return_type .)
    DEF             reduce using rule 4 (declaration -> DECL ID LPAREN function_args RPAREN COLON return_type .)
    $end            reduce using rule 4 (declaration -> DECL ID LPAREN function_args RPAREN COLON return_type .)


state 31

    (9) return_type -> INT .

    DECL            reduce using rule 9 (return_type -> INT .)
    DEF             reduce using rule 9 (return_type -> INT .)
    $end            reduce using rule 9 (return_type -> INT .)
    LBRACE          reduce using rule 9 (return_type -> INT .)


state 32

    (10) return_type -> FLOAT .

    DECL            reduce using rule 10 (return_type -> FLOAT .)
    DEF             reduce using rule 10 (return_type -> FLOAT .)
    $end            reduce using rule 10 (return_type -> FLOAT .)
    LBRACE          reduce using rule 10 (return_type -> FLOAT .)


state 33

    (11) return_type -> STRING .

    DECL            reduce using rule 11 (return_type -> STRING .)
    DEF             reduce using rule 11 (return_type -> STRING .)
    $end            reduce using rule 11 (return_type -> STRING .)
    LBRACE          reduce using rule 11 (return_type -> STRING .)


state 34

    (12) return_type -> BOOLEAN .

    DECL            reduce using rule 12 (return_type -> BOOLEAN .)
    DEF             reduce using rule 12 (return_type -> BOOLEAN .)
    $end            reduce using rule 12 (return_type -> BOOLEAN .)
    LBRACE          reduce using rule 12 (return_type -> BOOLEAN .)


state 35

    (13) return_type -> VOID .

    DECL            reduce using rule 13 (return_type -> VOID .)
    DEF             reduce using rule 13 (return_type -> VOID .)
    $end            reduce using rule 13 (return_type -> VOID .)
    LBRACE          reduce using rule 13 (return_type -> VOID .)


state 36

    (5) definition -> DEF ID LPAREN function_args RPAREN COLON return_type . block
    (14) block -> . LBRACE recursive_statement RBRACE

    LBRACE          shift and go to state 38

    block                          shift and go to state 37

state 37

    (5) definition -> DEF ID LPAREN function_args RPAREN COLON return_type block .

    DECL            reduce using rule 5 (definition -> DEF ID LPAREN function_args RPAREN COLON return_type block .)
    DEF             reduce using rule 5 (definition -> DEF ID LPAREN function_args RPAREN COLON return_type block .)
    $end            reduce using rule 5 (definition -> DEF ID LPAREN function_args RPAREN COLON return_type block .)


state 38

    (14) block -> LBRACE . recursive_statement RBRACE
    (15) recursive_statement -> . statement recursive_statement
    (16) recursive_statement -> . empty
    (17) statement -> . return_statement
    (18) statement -> . expression SEMI
    (19) statement -> . if_statement
    (20) statement -> . while_statement
    (21) statement -> . variable_declaration
    (22) statement -> . variable_assignment
    (69) empty -> .
    (23) return_statement -> . RETURN ret_value SEMI
    (36) expression -> . expression_binary_operation
    (37) expression -> . expression_variable
    (38) expression -> . expression_unary_operation
    (39) expression -> . expression_literal
    (40) expression -> . function_invocation
    (41) expression -> . index_access
    (26) if_statement -> . IF expression block else_statement
    (29) while_statement -> . WHILE expression block
    (30) variable_declaration -> . ID COLON var_type EQUALS expression SEMI
    (31) variable_assignment -> . ID EQUALS expression SEMI
    (42) expression_binary_operation -> . expression PLUS expression
    (43) expression_binary_operation -> . expression MINUS expression
    (44) expression_binary_operation -> . expression TIMES expression
    (45) expression_binary_operation -> . expression DIVIDE expression
    (46) expression_binary_operation -> . expression MOD expression
    (47) expression_binary_operation -> . expression AND expression
    (48) expression_binary_operation -> . expression OR expression
    (49) expression_binary_operation -> . expression LT expression
    (50) expression_binary_operation -> . expression GT expression
    (51) expression_binary_operation -> . expression LE expression
    (52) expression_binary_operation -> . expression GE expression
    (53) expression_binary_operation -> . expression EQ expression
    (54) expression_binary_operation -> . expression NEQ expression
    (55) expression_variable -> . ID
    (56) expression_unary_operation -> . NOT expression
    (57) expression_unary_operation -> . MINUS expression
    (58) expression_literal -> . FLOAT_LITERAL
    (59) expression_literal -> . INT_LITERAL
    (60) expression_literal -> . STRING_LITERAL
    (61) expression_literal -> . BOOLEAN_LITERAL
    (62) function_invocation -> . ID LPAREN func_invocation_args RPAREN
    (66) index_access -> . ID index_access_aux

    RBRACE          reduce using rule 69 (empty -> .)
    RETURN          shift and go to state 48
    IF              shift and go to state 55
    WHILE           shift and go to state 56
    ID              shift and go to state 57
    NOT             shift and go to state 59
    MINUS           shift and go to state 58
    FLOAT_LITERAL   shift and go to state 60
    INT_LITERAL     shift and go to state 61
    STRING_LITERAL  shift and go to state 62
    BOOLEAN_LITERAL shift and go to state 63

    recursive_statement            shift and go to state 39
    statement                      shift and go to state 40
    empty                          shift and go to state 41
    return_statement               shift and go to state 42
    expression                     shift and go to state 43
    if_statement                   shift and go to state 44
    while_statement                shift and go to state 45
    variable_declaration           shift and go to state 46
    variable_assignment            shift and go to state 47
    expression_binary_operation    shift and go to state 49
    expression_variable            shift and go to state 50
    expression_unary_operation     shift and go to state 51
    expression_literal             shift and go to state 52
    function_invocation            shift and go to state 53
    index_access                   shift and go to state 54

state 39

    (14) block -> LBRACE recursive_statement . RBRACE

    RBRACE          shift and go to state 64


state 40

    (15) recursive_statement -> statement . recursive_statement
    (15) recursive_statement -> . statement recursive_statement
    (16) recursive_statement -> . empty
    (17) statement -> . return_statement
    (18) statement -> . expression SEMI
    (19) statement -> . if_statement
    (20) statement -> . while_statement
    (21) statement -> . variable_declaration
    (22) statement -> . variable_assignment
    (69) empty -> .
    (23) return_statement -> . RETURN ret_value SEMI
    (36) expression -> . expression_binary_operation
    (37) expression -> . expression_variable
    (38) expression -> . expression_unary_operation
    (39) expression -> . expression_literal
    (40) expression -> . function_invocation
    (41) expression -> . index_access
    (26) if_statement -> . IF expression block else_statement
    (29) while_statement -> . WHILE expression block
    (30) variable_declaration -> . ID COLON var_type EQUALS expression SEMI
    (31) variable_assignment -> . ID EQUALS expression SEMI
    (42) expression_binary_operation -> . expression PLUS expression
    (43) expression_binary_operation -> . expression MINUS expression
    (44) expression_binary_operation -> . expression TIMES expression
    (45) expression_binary_operation -> . expression DIVIDE expression
    (46) expression_binary_operation -> . expression MOD expression
    (47) expression_binary_operation -> . expression AND expression
    (48) expression_binary_operation -> . expression OR expression
    (49) expression_binary_operation -> . expression LT expression
    (50) expression_binary_operation -> . expression GT expression
    (51) expression_binary_operation -> . expression LE expression
    (52) expression_binary_operation -> . expression GE expression
    (53) expression_binary_operation -> . expression EQ expression
    (54) expression_binary_operation -> . expression NEQ expression
    (55) expression_variable -> . ID
    (56) expression_unary_operation -> . NOT expression
    (57) expression_unary_operation -> . MINUS expression
    (58) expression_literal -> . FLOAT_LITERAL
    (59) expression_literal -> . INT_LITERAL
    (60) expression_literal -> . STRING_LITERAL
    (61) expression_literal -> . BOOLEAN_LITERAL
    (62) function_invocation -> . ID LPAREN func_invocation_args RPAREN
    (66) index_access -> . ID index_access_aux

    RBRACE          reduce using rule 69 (empty -> .)
    RETURN          shift and go to state 48
    IF              shift and go to state 55
    WHILE           shift and go to state 56
    ID              shift and go to state 57
    NOT             shift and go to state 59
    MINUS           shift and go to state 58
    FLOAT_LITERAL   shift and go to state 60
    INT_LITERAL     shift and go to state 61
    STRING_LITERAL  shift and go to state 62
    BOOLEAN_LITERAL shift and go to state 63

    statement                      shift and go to state 40
    recursive_statement            shift and go to state 65
    empty                          shift and go to state 41
    return_statement               shift and go to state 42
    expression                     shift and go to state 43
    if_statement                   shift and go to state 44
    while_statement                shift and go to state 45
    variable_declaration           shift and go to state 46
    variable_assignment            shift and go to state 47
    expression_binary_operation    shift and go to state 49
    expression_variable            shift and go to state 50
    expression_unary_operation     shift and go to state 51
    expression_literal             shift and go to state 52
    function_invocation            shift and go to state 53
    index_access                   shift and go to state 54

state 41

    (16) recursive_statement -> empty .

    RBRACE          reduce using rule 16 (recursive_statement -> empty .)


state 42

    (17) statement -> return_statement .

    RETURN          reduce using rule 17 (statement -> return_statement .)
    IF              reduce using rule 17 (statement -> return_statement .)
    WHILE           reduce using rule 17 (statement -> return_statement .)
    ID              reduce using rule 17 (statement -> return_statement .)
    NOT             reduce using rule 17 (statement -> return_statement .)
    MINUS           reduce using rule 17 (statement -> return_statement .)
    FLOAT_LITERAL   reduce using rule 17 (statement -> return_statement .)
    INT_LITERAL     reduce using rule 17 (statement -> return_statement .)
    STRING_LITERAL  reduce using rule 17 (statement -> return_statement .)
    BOOLEAN_LITERAL reduce using rule 17 (statement -> return_statement .)
    RBRACE          reduce using rule 17 (statement -> return_statement .)


state 43

    (18) statement -> expression . SEMI
    (42) expression_binary_operation -> expression . PLUS expression
    (43) expression_binary_operation -> expression . MINUS expression
    (44) expression_binary_operation -> expression . TIMES expression
    (45) expression_binary_operation -> expression . DIVIDE expression
    (46) expression_binary_operation -> expression . MOD expression
    (47) expression_binary_operation -> expression . AND expression
    (48) expression_binary_operation -> expression . OR expression
    (49) expression_binary_operation -> expression . LT expression
    (50) expression_binary_operation -> expression . GT expression
    (51) expression_binary_operation -> expression . LE expression
    (52) expression_binary_operation -> expression . GE expression
    (53) expression_binary_operation -> expression . EQ expression
    (54) expression_binary_operation -> expression . NEQ expression

    SEMI            shift and go to state 66
    PLUS            shift and go to state 67
    MINUS           shift and go to state 68
    TIMES           shift and go to state 69
    DIVIDE          shift and go to state 70
    MOD             shift and go to state 71
    AND             shift and go to state 72
    OR              shift and go to state 73
    LT              shift and go to state 74
    GT              shift and go to state 75
    LE              shift and go to state 76
    GE              shift and go to state 77
    EQ              shift and go to state 78
    NEQ             shift and go to state 79


state 44

    (19) statement -> if_statement .

    RETURN          reduce using rule 19 (statement -> if_statement .)
    IF              reduce using rule 19 (statement -> if_statement .)
    WHILE           reduce using rule 19 (statement -> if_statement .)
    ID              reduce using rule 19 (statement -> if_statement .)
    NOT             reduce using rule 19 (statement -> if_statement .)
    MINUS           reduce using rule 19 (statement -> if_statement .)
    FLOAT_LITERAL   reduce using rule 19 (statement -> if_statement .)
    INT_LITERAL     reduce using rule 19 (statement -> if_statement .)
    STRING_LITERAL  reduce using rule 19 (statement -> if_statement .)
    BOOLEAN_LITERAL reduce using rule 19 (statement -> if_statement .)
    RBRACE          reduce using rule 19 (statement -> if_statement .)


state 45

    (20) statement -> while_statement .

    RETURN          reduce using rule 20 (statement -> while_statement .)
    IF              reduce using rule 20 (statement -> while_statement .)
    WHILE           reduce using rule 20 (statement -> while_statement .)
    ID              reduce using rule 20 (statement -> while_statement .)
    NOT             reduce using rule 20 (statement -> while_statement .)
    MINUS           reduce using rule 20 (statement -> while_statement .)
    FLOAT_LITERAL   reduce using rule 20 (statement -> while_statement .)
    INT_LITERAL     reduce using rule 20 (statement -> while_statement .)
    STRING_LITERAL  reduce using rule 20 (statement -> while_statement .)
    BOOLEAN_LITERAL reduce using rule 20 (statement -> while_statement .)
    RBRACE          reduce using rule 20 (statement -> while_statement .)


state 46

    (21) statement -> variable_declaration .

    RETURN          reduce using rule 21 (statement -> variable_declaration .)
    IF              reduce using rule 21 (statement -> variable_declaration .)
    WHILE           reduce using rule 21 (statement -> variable_declaration .)
    ID              reduce using rule 21 (statement -> variable_declaration .)
    NOT             reduce using rule 21 (statement -> variable_declaration .)
    MINUS           reduce using rule 21 (statement -> variable_declaration .)
    FLOAT_LITERAL   reduce using rule 21 (statement -> variable_declaration .)
    INT_LITERAL     reduce using rule 21 (statement -> variable_declaration .)
    STRING_LITERAL  reduce using rule 21 (statement -> variable_declaration .)
    BOOLEAN_LITERAL reduce using rule 21 (statement -> variable_declaration .)
    RBRACE          reduce using rule 21 (statement -> variable_declaration .)


state 47

    (22) statement -> variable_assignment .

    RETURN          reduce using rule 22 (statement -> variable_assignment .)
    IF              reduce using rule 22 (statement -> variable_assignment .)
    WHILE           reduce using rule 22 (statement -> variable_assignment .)
    ID              reduce using rule 22 (statement -> variable_assignment .)
    NOT             reduce using rule 22 (statement -> variable_assignment .)
    MINUS           reduce using rule 22 (statement -> variable_assignment .)
    FLOAT_LITERAL   reduce using rule 22 (statement -> variable_assignment .)
    INT_LITERAL     reduce using rule 22 (statement -> variable_assignment .)
    STRING_LITERAL  reduce using rule 22 (statement -> variable_assignment .)
    BOOLEAN_LITERAL reduce using rule 22 (statement -> variable_assignment .)
    RBRACE          reduce using rule 22 (statement -> variable_assignment .)


state 48
